# books-api-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  books.DATABASE_URL  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
books_api_cli/: database.py  main.py  models.py  security.py
books_api_cli/cli/: __init__.py  main.py
tests/tests/: test_api.py  test_cli.py
